--- a/books.html
+++ b/books.html
@@ -3,10 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Books I Heart</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body style="background-color: #e4fbff;">
   <h1>Books I Love.</h1>
   <ul>
     <li>Dune</li>
