--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>&#129408;Patrick's Personal Site</title>
+  <title>&#129326;Patrick's Personal Site</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -13,7 +14,7 @@
         <a href="https://www.youtube.com/watch?v=pUaKcFI4BZY" target="_blank"><img src="media\circle-cropped.png" alt="Patrick Patrickson image"></a>
       </td>
       <td>
-        <h1>Patrick 'Wofgang' Parkison'</h1>
+        <h1>Patrick 'Wolfgang' Parkison'</h1>
 
         <p>
           <em><a href="https://thescriptlad.com/" target="_blank">TheScriptLad.com</a></em><br>
@@ -43,8 +44,8 @@
     <li>Wine and Beer</li>
     <li><a href="books.html">Reading</a></li>
   </ol>
-  <hr size="3" noshade>
-  <h2>Work Experience</h2>
+  <hr>
+  <h3>Work Experience</h3>
   <table cellspacing="5">
     <thead>
       <tr>
@@ -83,45 +84,45 @@
 
     </tfoot>
   </table>
-  <hr size="3" noshade>
+  <hr>
   <h3>My Skills</h3>
   <table cellspacing="10">
     <tr>
-      <td>
+
       <td>PowerShell</td>
       <td>
         &#11088;&#11088;&#11088;&#11088;&#11088;
       </td>
-      </td>
-      <td>
+
+
       <td>Cherwell Development</td>
       <td>&#11088;&#11088;&#11088;&#11088;</td>
-      </td>
+
     </tr>
     <tr>
-      <td>
+
       <td>Microsoft C#</td>
       <td>&#11088;&#11088;&#11088;&#11088;</td>
-      </td>
-      <td>
+
       <td>MS Visual Studio</td>
       <td>&#11088;&#11088;&#11088;&#11088;</td>
-      </td>
+
     </tr>
     <tr>
-      <td>
+
       <td>Python</td>
       <td>&#11088;&#11088;</td>
-      </td>
-      <td>
+
+
       <td>Arduino Development</td>
       <td>&#11088;&#11088;&#11088;&#11088;&#11088;</td>
-      </td>
+
     </tr>
   </table>
-  <hr size="3" noshade>
+  <hr>
+
   <p>
-    <a href="contactme.html">Contact Me.</a>
+    <h3></h><a href="contactme.html">Contact Me</a></h3>
   </p>
 
 </body>
