--- a/contactme.html
+++ b/contactme.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title></title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body style="background-color: #e4fbff;">
   <h1>My Fake Contact Information:</h1>
   <strong>Name: </strong>Patrick Parkison <br>
   <strong>Email: </strong>patrick@thescriptlad.com <br>
